//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table UserAccount {
  id String [pk]
  account_name String [unique, not null]
  email String [unique, not null]
  created_at DateTime [default: `now()`, not null]
  photoUrl String
  user User [not null]
  owner String [not null]
  links Json
  page page
  pageId String [unique]
  bucket bucket
  bucketId String [unique]
  board board
  boardId String [unique]
}

Table User {
  id String [pk]
  email String [unique, not null]
  account UserAccount
  auth Auth [not null]
  authId String [unique, not null]
  userAccountId String [unique]
  name String [not null]
  photoUrl String
}

Table Auth {
  id String [pk]
  email String [unique, not null]
  passHash String [not null]
  salt String [not null]
  user User
}

Table page {
  id String [pk]
  route String [unique, not null]
  template Json [not null]
  links Json
  userAccountId String [unique, not null]
  UserAccount UserAccount
}

Table bucket {
  id String [pk]
  files Json[] [not null]
  userAccountId String [unique, not null]
  UserAccount UserAccount
  bucketRef String [not null]
}

Table board {
  id String [pk]
  items item [not null]
  userAccountId String [unique, not null]
  UserAccount UserAccount
}

Table item {
  id String [pk]
  title String [not null]
  description String [not null]
  priority String [not null]
  script String [not null]
  reference String [not null]
  storage String [not null]
  prefix String [not null]
  created_at String [not null]
  board board
  boardId String
}

Ref: UserAccount.pageId - page.id

Ref: UserAccount.bucketId - bucket.id

Ref: UserAccount.boardId - board.id

Ref: User.userAccountId > UserAccount.id

Ref: User.authId - Auth.id

Ref: item.boardId > board.id